--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ include_directories(transform)
 add_subdirectory(transform)
 
 if(BUILD_TESTS)
+    enable_testing()
     add_subdirectory(tests)
+    add_test(testing tests/testing)
 endif(BUILD_TESTS)
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Werror")
